--- a/src/index.css
+++ b/src/index.css
@@ -37,5 +37,5 @@ ul {
 .table-row {
   padding: 4px;
   margin: 10px 0 10px 0;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid gray;
 }
